# webdriver_manager

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.adoc  README.md  RELEASING.md  azure-pipelines.yml  logging.json  pyproject.toml  pytest.ini  release-process.rst  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  utils.py
.github/: FUNDING.yml  set_win_reg_keys.ps1
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  deploy_test.yml  test.yml  test_xdist.yml
negative_tests/: test_browsers_not_installed.py
tests/: config.ini  conftest.py  helper.py  test_brave_driver.py  test_cache.py  test_chrome_driver.py  test_chromium_driver.py  test_config.py  test_constants.py  test_custom_http_client.py  test_custom_logger.py  test_downloader.py  test_driver_cache.py  test_driver_cache_binary_selection.py  test_driver_cache_manager.py  test_driver_cache_request_dedup.py  test_driver_manager.py  test_edge_chromium_manager.py  test_edge_driver.py  test_env_variables.py  test_file_manager.py  test_firefox_arch_detection.py  test_firefox_manager.py  test_ie_driver.py  test_manager_concurrency.py  test_multi_processes.py  test_no_print_global_logs.py  test_opera_manager.py  test_phantomjs.py  test_phantomjs_manager.py  test_requests.py  test_silent_global_logs.py  test_silent_logs.py  test_utils.py  test_wdm_logs.py  utils.py  wd_config.ini
tests/xdist/: conftest.py  test_cuncurent_2.py
tests_negative/: test_browsers_not_installed.py
tests_xdist/: conftest.py  test_cuncurent_1.py  test_cuncurent_2.py
webdriver_manager/: __init__.py  archive.py  binary.py  cache.py  cached_version_driver.py  chrome.py  config.py  default.ini  dispatch.py  download_manager.py  driver.py  driver_cache.py  driver_manager.py  driver_metadata.py  ff_config.py  firefox.py  logger.py  manager.py  microsoft.py  opera.py  phantomjs.py  utils.py
webdriver_manager/config/: __init__.py  meta.py
webdriver_manager/core/: archive.py  config.py  constants.py  download_manager.py  driver.py  driver_cache.py  file_manager.py  http.py  logger.py  manager.py  os_manager.py  utils.py
webdriver_manager/drivers/: __init__.py  chrome.py  driver.py  edge.py  firefox.py  ie.py  manager.py  microsoft.py  opera.py
webdriver_manager/utils/: __init__.py  archive.py  driver_cache.py  utils.py
