[project]
name = "webdriver-manager"
version = "4.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
    "packaging",
]

[dependency-groups]
dev = [
    "selenium",
    "pytest",
    "pytest-cov",
    "bump2version",
    "pytest-xdist",
    "pybrowsers<1.4.0; python_version >= '3.9'",
    "mock",
]

[tool.uv.sources]

[tool.pytest.ini_options]
addopts = "--color=yes --cov=webdriver_manager --cov-report=term-missing"
console_output_style = "progress"
