[project]
name = "webdriver-manager"
version = "4.1.1"
description = "Library provides the way to automatically manage drivers for different browsers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "requests",
    "python-dotenv",
    "packaging",
]

[dependency-groups]
dev = [
    "selenium",
    "pytest",
    "pytest-cov",
    "bump2version",
    "pytest-xdist",
    "pybrowsers<1.4.0; python_version >= '3.9'",
    "mock",
]

[tool.uv.sources]

[tool.pytest.ini_options]
addopts = "--color=yes --cov=webdriver_manager --cov-report=term-missing"
console_output_style = "progress"
