[bumpversion]
current_version = 3.5.2
commit = True
tag = True

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]
search = version='{current_version}',
replace = version='{new_version}',

[bumpversion:file:webdriver_manager/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.md
