[bumpversion]
current_version = 4.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}',
replace = version='{new_version}',

[bumpversion:file:webdriver_manager/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.md
